MHA-37|Feat: Get Message by ID endpoint - user can retrieve message by ID - https://heritageoffaithtech.atlassian.net/browse/MHA-37
